Add production STAGE to config HTTPS-PORTAL

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     restart: always
     environment:
       DOMAINS: '${DOMAIN} -> http://wordpress'
+      STAGE: 'production'
 
   wordpress:
     restart: always
